fix: Collector list -> to list